--- a/meu_site/index.html
+++ b/meu_site/index.html
@@ -25,7 +25,7 @@
             <img class="br-50" src="assets/img/foto-vitor.jpg" weight="300"" height="300" alt="Foto do criador do conteúdo">
         </div>
         <div  class="p-30">
-            <p class="justify">Meu desejo de fazer parte da criação de inovações tecnológicas me fez buscar por qualificação para construir uma carreira de sucesso na área de TI. Atualmente  participo do curso da Generation Brasil para adquirir habilidades necessárias para trabalhar como Desenvolvedor Web Java. Neste curso estou tendo a oportunidade trabalhar em um projeto com 5 colegas onde iremos desenvolvemos um site do zero com alto nível de exigência.</p>
+            <p class="justify">Meu desejo de fazer parte da criação de inovações tecnológicas me fez buscar por qualificação para construir uma carreira de sucesso na área de TI. Atualmente  participo do curso da Generation Brasil para adquirir habilidades necessárias para trabalhar como Desenvolvedor Web Java. Neste curso estou tendo a oportunidade trabalhar em um projeto com 5 colegas onde iremos desenvolvemos um site do zero com alto nível de exigência</p>
         </div>
     </div>
 
